# Election

./: 1.txt  Makefile  config.status  election.glade  l_ordre.txt  listes_vote.txt  user.txt
autom4te.cache/: requests
src/: 1.txt  Election.txt  Makefile  Makefile.am  Makefile.in  bureau.txt  bureaudevote.c  bureaudevote.h  callbacks.c  callbacks.h  condidat.c  condidat.h  election  election.c  election.h  fonction.c  fonction.h  interface.c  interface.c.bak  interface.h  interface.h.bak  l_ordre.txt  liste.c  liste.h  listes_vote.txt  login.c  login.h  main.c  recheElection.txt  reclamations.txt  search.txt  utilisateur.c  utilisateur.h  utulisateur.txt
src/.deps/: callbacks.Po  condidat.Po  liste.Po  login.Po
